use of valueOf (can avoid instantations), Collections.singleton for one-entry collections, some javadoc improvements
git-svn-id: https://scm.mmbase.org/mmbase/trunk@21642 91430c5f-d668-0410-9e7d-dd663366dcfd